--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --bg-gray: #fafafa;
+}
+
 html {
     font-size: 10px;
 }
 
 .h-main {
     height: calc(100vh - 64px);
+}
+
+.left .css-2dum1v-MuiDrawer-docked .MuiDrawer-paper, .css-1s04tii-MuiDrawer-docked .MuiDrawer-paper {
+    margin-top: 6.4rem !important;
+    background: var(--bg-gray) !important;
 }
